# Varys

./: README.md  policy.json  pyproject.toml  scanner.py  signatures.json
scanner_file/: scanner.py
sietch_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
